# nockchain

./: Cargo.toml
crates/hoonc/: Cargo.toml
crates/hoonc/src/: lib_library_config.rs  main_optimised_entry_point.rs  memory_pool.rs  streaming_prover.rs
crates/nockapp/src/kernel/: form.rs
crates/nockapp/src/nockapp/: mod.rs
crates/nockchain/: Cargo.toml
crates/nockchain-libp2p-io/src/: nc.rs
crates/nockchain/src/: lib.rs  main.rs  mining.rs  mining_pool.rs
crates/nockvm/rust/nockvm/src/: interpreter.rs
crates/nockvm/rust/nockvm/src/jets/: list.rs
crates/zkvm-jetpack/src/: hot.rs  utils.rs
crates/zkvm-jetpack/src/form/math/: bpoly.rs
crates/zkvm-jetpack/src/jets/: base_jets.rs  bp_jets.rs  fp_jets.rs  mary_jets.rs  mega_jets.rs  mod.rs  tip5_jets.rs  utils.rs
hoon/apps/dumbnet/: inner.hoon
hoon/apps/dumbnet/lib/: miner.hoon
hoon/common/: tx-engine.hoon
hoon/common/stark/: prover.hoon
hoon/common/ztd/: eight.hoon
scripts/: build_and_test.sh  run_optimized_miner.sh
