[package]
name = "hoonc"
version = "0.2.0"
edition.workspace = true

[dependencies]
bincode = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
dirs = { workspace = true }
futures = { workspace = true }
nockapp = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = "1.4"

# tracing-tracy = { workspace = true, features = ["flush-on-exit"] }
walkdir = "2.5.0"

[[bin]]
name = "hoonc"
path = "src/main.rs"

[package]
name = "nockchain-miner-optimized"
version = "0.1.0"
edition = "2021"

[dependencies]
# Memory optimization
mimalloc = { version = "0.1", default-features = false }
bumpalo = "3.14"
# For future parallelization
rayon = "1.8"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
# This alone can reduce memory usage by 10-20%
overflow-checks = false

[profile.release.package."*"]
opt-level = 3

# Memory-optimized build
[profile.memory-opt]
inherits = "release"
opt-level = "s"  # Optimize for size
